--- a/app/src/main/res/layout/content_spotify.xml
+++ b/app/src/main/res/layout/content_spotify.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,4 +12,10 @@
     tools:context="com.cloudskol.cloudroid.spotify.SpotifyActivity"
     tools:showIn="@layout/activity_spotify">
 
-</RelativeLayout>
+    <GridView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gridView_spotify"
+        android:layout_gravity="top|left"
+        android:numColumns="2"/>
+</FrameLayout>
