--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,15 +9,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.cloudskol.cloudroid.spotify.SpotifyActivity"
-    tools:showIn="@layout/activity_spotify">
+    tools:context="com.cloudskol.cloudroid.spotify.MovieDetailsActivity"
+    tools:showIn="@layout/activity_movie_details">
 
-    <GridView
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:id="@+id/gridView_spotify"
-        android:layout_gravity="top|left"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:numColumns="2"/>
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/movie_details_textview" />
+</RelativeLayout>
