--- a/app/src/main/res/layout/content_spotify.xml
+++ b/app/src/main/res/layout/content_spotify.xml
@@ -16,8 +16,9 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:id="@+id/gridView_spotify"
-        android:layout_gravity="top|left"
+        android:layout_gravity="center"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
-        android:numColumns="2"/>
+        android:numColumns="3"
+        android:columnWidth="150dp" />
 </FrameLayout>
