--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="main_btn_height">50dp</dimen>
     <dimen name="main_btn_top_margin">10dp</dimen>
     <dimen name="main_btn_font_size">15sp</dimen>
+
+    <dimen name="title_font_size_25">25sp</dimen>
 </resources>
