--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dp"
-        android:textSize="25sp"/>
+        android:textSize="@dimen/title_font_size_25"/>
 
     <Button
         android:layout_width="fill_parent"
