--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -17,6 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/movie_details_poster" />
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/movie_details_rating"
+        android:numStars="10"
+        android:stepSize="1.0" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
