--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/movie_details_rating"
-        android:numStars="10"
-        android:stepSize="1.0" />
+        android:numStars="5"
+        android:stepSize="0.5" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
