--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -18,12 +18,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/movie_details_poster" />
 
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/movie_details_rating"
-        android:numStars="5"
-        android:stepSize="0.5" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,4 +28,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/movie_details_overview" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_movie_rating"
+        android:textSize="@dimen/title_font_size_15"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/details_title_top_margin"/>
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/movie_details_rating"
+        android:numStars="5"
+        android:stepSize="0.5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_movie_release_date"
+        android:textSize="@dimen/title_font_size_15"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/details_title_top_margin" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/movie_details_release_date" />
 </LinearLayout>
